# Software-Renderer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  SoftRenderer.sln  SoftRenderer.vcxproj  SoftRenderer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
advanced ray tracing/: run assgiment4.exe.lnk  test.txt
advanced ray tracing/exe/: assgiment4.exp  assgiment4.lib  test.txt
advanced ray tracing/src/: Base.cpp  Base.h  CImg.h  Mesh.cpp  Mesh.h  Parameters.h  RTCamera.cpp  RTCamera.h  la.cpp  la.h  main.cpp  matrix.cpp  matrix.h  obj.cpp  obj.h  objparser.cpp  objparser.h  ofApp.cpp  ofApp.h  ofMain.h  timer.hpp
graphics pipeline/: Run.exe.lnk
graphics pipeline/exe/: assignment3.exp  assignment3.lib
graphics pipeline/vs-studio-project/: assignment3.sln
graphics pipeline/vs-studio-project/assignment3/: assignment3.vcxproj  assignment3.vcxproj.filters
graphics pipeline/vs-studio-project/assignment3/src/: la.h  main.cpp  obj.hpp  objparser.h  ofApp.cpp  timer.hpp
simple ray tracing/exe/: assignment1-simple_raytracing.lib  cs248assignments.exp  cs248assignments.lib  cs248assignments_debug.exp
simple ray tracing/vs-studio-project/: cs248assignments.sln
simple ray tracing/vs-studio-project/cs248assignments/: cs248assignments.vcxproj  cs248assignments.vcxproj.filters
simple ray tracing/vs-studio-project/cs248assignments/src/: Base.cpp  Base.h  la.cpp  la.h  main.cpp  matrix.cpp  matrix.h  obj.hpp  ofApp.cpp  ofApp.h  timer.hpp
src/: Base.cpp  Base.h  CImg.h  Camera.cpp  Camera.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Macros.h  isocontour.cpp  isocontour.h  la.cpp  la.h  main.cpp  matrix.cpp  matrix.h  obj.cpp  obj.h  obj.hpp  objparser.cpp  objparser.h  timer.hpp  viewer.cpp  viewer.h
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
